# lgd-fuzzy-matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  Home.py  api.py  api_client.py  app.py  app_auth.py  app_components.py  build_db.py  docker-compose.yml  main.py  matcher.py  pyproject.toml  requirements.txt  sync_data.py  utils.py
pages/: 01_Quick_Validate.py  02_Bulk_Upload.py  03_LGD_Directory.py
tests/: conftest.py  test_api.py  test_app_auth.py  test_matcher.py  test_phonetic.py  test_utils.py  test_village.py
