[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lgd-fuzzy-matcher"
version = "1.1.0"
description = "Production-grade fuzzy matching for Indian Government LGD data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.0",
    "rapidfuzz>=3.9.0",
    "openpyxl>=3.1.2",
    "streamlit>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pymysql>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
lgd-match = "main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
